# biomimetism

./: README.md
ants_system/: exercice.ipynb  main.py
bat_radar/: bat_radar.py  exercice.ipynb  pyproject.toml
nlp/: pyproject.toml
pso/: main.py
