[tool.poetry]
name = "bat-radar"
version = "0.1.0"
description = "script to try the sonar algo"
authors = ["art0-v1r0s <arthurd2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.2"
matplotlib = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
